# webpage-hakyll

./: .gitattributes  .gitignore  LICENSE.md  Main.hs  Makefile  README.md  blog.html  contact.html  index.html  index.md  papers.html  publications.md  setup2016.html  site.hs  talks.html  todo.txt  webpage.cabal  writings-fr.html  writings-jp.html  writings.html
bib/: refs.bib
css/: code.css  style.css
files/: desjardins-proulx.bib
js/: my-js.js  my-js.min.js
posts/: 2010-05-01-origine.html  2012-01-01-how-likely.html  2012-03-27-foot.html  2012-06-27-complex.html  2012-08-22-case-arxiv.html  2012-09-12-wagner.html  2012-09-24-repeatability.html  2013-02-06-transposon.html  2013-04-29-intuition-ai.html  2013-05-14-case-preprint.html  2013-05-21-output.html  2013-07-05-dtl.html  2013-07-22-scriptopia.html  2014-06-11-food-webs.html  2015-04-05-automated-reasoning.html  2015-07-12-fol.html  2015-07-13-fol.html  2015-07-13-gentle-intro-stat-rel.html  2015-07-13-srl-code.html  2015-08-06-srl-tructure-learning.html  2015-10-19-logic2.html  2015-11-02-theory-and-ml.html  2016-06-28-not-your-grandmother-cpp.html  2016-07-05-can-alphago.html  2017-01-27-linux.html  2017-02-21-fuzzy-connectives.html  2017-09-12-fuzzthat.html  2018-04-17-sol.html  2019-01-25-grammar-evolution.html  2021-05-01-all-in-lambda.md
templates/: default.html  post-item.html  post.html
