cabal-version:       2.4
name:                webpage
version:             1.0.0
synopsis:            Personal webpage
description:         My personal page... What more to say?
homepage:            http://phdp.github.io/
license:             MIT
author:              Philippe Desjardins-Proulx
maintainer:          philippe.d.proulx@gmail.com
category:            Web
build-type:          Simple

executable webpage
  main-is:             Main.hs
  build-depends:       base, hakyll

