cabal-version:       2.4
name:                webpage
version:             1.0.0
synopsis:            Personal webpage
description:         My personal page... What more to say?
homepage:            https://phdp.github.io/
license:             MIT
author:              Philippe Desjardins-Proulx
maintainer:          philippe.desjardins.proulx@umontreal.ca
category:            Web
build-type:          Simple

executable webpage
  default-language:    Haskell2010
  main-is:             Main.hs
  build-depends:
    base,
    hakyll == 4.15.1.1
